terraform/aws/aws-2-instances/eip.tf
# resource "aws_eip" "service-eip" {
#   instance    = "${aws_instance.aws-instance-01.id}"
# }
